<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    tools:context=".Activities.VehicleSelectActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="@dimen/field_divider_padding"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/itemsContainer"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"

                >


                <!--Vehicle Reg number and Image-->
                <Button
                    android:id="@+id/vs_action_next"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:minHeight="55dp"
                    android:text="@string/vs_action_next"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

                <!--Vehicle Fleet Number-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="@dimen/field_divider_padding"
                    android:orientation="horizontal"
                    android:textDirection="ltr"
                    android:weightSum="1">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/make_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/make"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/vs_prompt_make"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:longClickable="false"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textIsSelectable="false" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <!--Vehicle Details Make Mode Year-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="@dimen/field_divider_padding"
                    android:orientation="horizontal"
                    android:textDirection="ltr"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/model_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/model"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/vs_prompt_model"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:longClickable="false"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textIsSelectable="false" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/out_km_fuel_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="@dimen/field_divider_padding"
                    android:orientation="horizontal"
                    android:textDirection="ltr"
                    android:weightSum="1">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/km_container"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/kilometer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Mileage"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!-- KM & FUEL OUT-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textDirection="ltr"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/qrcode"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.1"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_vehicles_can" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/vehiclenumber_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9">

                        <AutoCompleteTextView
                            android:id="@+id/vehiclenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dip"
                            android:completionThreshold="1"
                            android:hint="@string/vs_prompt_search_vehicle_number"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAllCaps="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vehicle_fleet_number_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vehicle_fleet_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:hint="@string/vs_prompt_vehicle_fleet_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:longClickable="false"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textIsSelectable="false" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>