<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/loginscreen"
    android:focusableInTouchMode="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_welcome"
        android:text="@string/login_welcome_msg"
        android:textSize="@dimen/title_text_size_large"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        />


    <ScrollView

        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"

        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/digitalfuge_logo" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@+id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_welcome_sub"
                android:text="@string/login_welcome_info"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                />
            <!--

                        <android.support.design.widget.TextInputLayout
                            android:layout_marginTop="60dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/companyNameContainer"
                            android:textColorHint="@color/white"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            >

                            <EditText
                                android:id="@+id/company"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30dip"
                                android:drawableLeft="@drawable/ic_domain_white_24dp"
                                android:drawableStart="@drawable/ic_domain_white_24dp"
                                android:drawablePadding="10dp"
                                android:textColor="@color/white"
                                android:hint="Company Code"
                                android:inputType="text"
                                android:maxLines="1"
                                android:paddingStart="20dp"
                                android:paddingLeft="20dp"
                                android:singleLine="true"
                                android:theme="@style/CustomEditText"
                                android:textDirection="anyRtl"

                                />

                        </android.support.design.widget.TextInputLayout>
            -->

            <TextView
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_trial_request"
                android:text="Don't have an account? Sign Up"
                android:textSize="16dp"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:visibility="invisible" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userNameContainer"
                android:layout_marginTop="@dimen/_50sdp"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dip"
                    android:drawableStart="@drawable/user_icon"
                    android:drawableLeft="@drawable/user_icon"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:hint="User Name"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:singleLine="true"
                    android:theme="@style/CustomEditText"
                    android:textColorHint="@color/colorPrimary"

                    android:textDirection="anyRtl" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
                android:id="@+id/passwordContainer"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             >

             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"

                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:drawableStart="@drawable/pswd_icon"
                 android:inputType="textPassword"
                 android:drawablePadding="10dp"
                 android:drawableLeft="@drawable/pswd_icon"
                 android:hint="Password"
                 android:maxLines="1"
                 android:textColor="@color/colorPrimary"
                 android:layout_marginTop="50dip"
                 android:textColorHint="@color/colorPrimary"
                 android:singleLine="true"
                 android:theme="@style/CustomEditText"
                 android:textDirection="anyRtl" />

         </android.support.design.widget.TextInputLayout>

            <TextView

                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password"
                android:text="Forgot Password?"
                android:textSize="16dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="right"
                android:visibility="invisible"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="Remember me"
                android:gravity="center_vertical|left"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <Button
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:id="@+id/email_sign_in_button"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="60dp"
                android:layout_marginTop="15dp"
             android:text="@string/action_sign_in"
             android:textAllCaps="false"
             android:textColor="@color/primaryTextColor"
             android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----- OR -----"
                android:textSize="16dp"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:visibility="gone" />


     </LinearLayout>
 </ScrollView>
</RelativeLayout>
